--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html{
+	scroll-behavior: smooth;
+}
+
 *{margin: 0; padding: 0; box-sizing:border-box; font-family: 'Poppins', sans-serif;}
 
 a{ text-decoration: none; }
@@ -366,4 +370,28 @@ form:hover.form-button button{
 		text-align: justify;
 }
 
+#myBtn{
+	position: fixed;
+	bottom: 20px;
+	right: 40px;
+	z-index: 99;
+	border: none;
+	color: #fff;
+	background: #00abff;
+	padding: 10px;
+	border-radius: 10px;
+	font-size: 18px;
 
+}
+
+#myBtn:hover{
+	background-color: #555;
+}
+
+
+
+@media(max-width:768px){
+	.nav-item{
+		text-align: center!important;
+	}
+}
